# replicationbench-release

./: .gitignore  2025-11-16T16-45-41-08-00_trgb-std-candle_7qLATTEwbnWJNDGGykYSwX.eval  2025-11-23T22-17-42-08-00_galaxy-manifold_HijdsR8o8A3xmRQPufezBh.eval  Dockerfile  LICENSE  PR_INSTRUCTIONS.md  README.md  all_expert_tasks_full.json  categorize_tasks.py  categorize_tasks_detailed.py  export_full_tasks.py  final_categorization.py  full_task_details.txt  inspect_final_tool.def  pyproject.toml  recategorize_tasks.py  verify_overlay_setup.sh
logs/claude-37-base-1/logs/: 2025-11-11T16-12-02-08-00_gw-nsbh_XTaqKdVS2FREviZfnXimjo.eval  2025-11-11T16-12-30-08-00_galaxy-manifold_fXxxEZTedac5dx5Vw3XpCu.eval  2025-11-11T16-12-34-08-00_trgb-std-candle_Pj5iwhm8qbKhP9oMhihcWb.eval  2025-11-11T16-12-37-08-00_ver-waves_jJSi3xKwQmbTyooVsy8EMC.eval  2025-11-11T16-12-56-08-00_galaxy-soptics_A4cSUQ7VcivZZDNpjXmXzF.eval  2025-11-11T16-12-57-08-00_gw-cosmo_ZZ8a3iJuZ95vWdh5svx6Fv.eval  2025-11-11T16-12-58-08-00_fable-mps_76iW8RjyNcbd24S9VvaqZz.eval  2025-11-11T16-13-54-08-00_mars-clouds_6PFYBnSGgwR6RwzdJaoEBg.eval  2025-11-11T16-14-06-08-00_tng-hod_XjvKuuQtDDPJaDLqGm9bwx.eval  2025-11-11T16-14-24-08-00_lensing-dr6-growth_62C3gZcDBgcmpukLv85xfX.eval  2025-11-11T16-14-24-08-00_ls-cal_7P6CfcmxbXS4eN4xZqBvii.eval  2025-11-11T16-14-24-08-00_phangs-PAHs_EiGCh4JFiVcNMsQcewM7af.eval  (+21 more)
src/: __init__.py  logging_config.py
src/dataset/: dataloader.py  paper_template.json  task_template.json  text_loader.py
src/evaluation/: __init__.py  download_utils.py  inspect_task.py  run_single.py  setup.py
(+2550 files in other folders)
