[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "replicationbench"
version = "0.1.0"
description = "ReplicationBench: AI evaluation benchmark for scientific paper reproduction"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
download = [
    "wget",
    "huggingface-hub",
    "datasets",
]
all = [
    "inspect_ai>=0.3.0",
    "wget",
    "huggingface-hub",
    "datasets",
    "anthropic",
    "openai",
    "google-genai",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dataset", "src/evaluation"]
